refactor: rename variables

--- a/character/templates/character/character.html
+++ b/character/templates/character/character.html
@@ -19,7 +19,7 @@
             <tr>
                 <td><p>{{ character.user.username }}</p></td>
                 <td><p>{{ character.get_race_display }}</p></td>
-                <td><p>{{ character.get_class_name_display }}</p></td>
+                <td><p>{{ character.get_klass_display }}</p></td>
                 <td><p>{{ character.get_alignment_display }}</p></td>
                 <td><p>{{ character.level }}</p></td>
                 <td><p>{{ character.xp }}</p></td>
