--- a/character/templates/character/equipment_select.html
+++ b/character/templates/character/equipment_select.html
@@ -4,7 +4,7 @@
     <div class="form rpgui-container framed-golden">
         <h1>Equipment</h1>
         <p>
-            {{ character.name }}, as a {{ character.get_class_name_display }},
+            {{ character.name }}, as a {{ character.get_klass_display }},
             please choose your equipment.
         </p>
         <form method="post">
