--- a/game/templates/game/game_list.html
+++ b/game/templates/game/game_list.html
@@ -25,7 +25,7 @@
                 <tr>
                     <td><a href={{ game.get_absolute_url }}>{{ game }}</a></td>
                     <td><p>{{ game.master }}</p></td>
-                    <td><p>{{ game.get_status_display }}</p></td>
+                    <td><p>{{ game.get_state_display }}</p></td>
                     <td><p>{{ game.character_set.all|length }}</p></td>
                     <td><p>{{ game.start_date }}</p></td>
                     <td><p>{{ game.end_date }}</p></td>
