--- a/character/templates/character/background_complete.html
+++ b/character/templates/character/background_complete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="form rpgui-container framed-golden">
-        <h1>Skills</h1>
+        <h1>Background</h1>
         <p>
             {{ character.name }}, as a {{ character.get_background_display }},
             please complete your background.
