add initiate combat button and related structure

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -103,6 +103,11 @@
                                         <button class="rpgui-button"><p>Ask for ability check</p></button>
                                     </a>
                                 </p>
+                                <p>
+                                    <a href={% url 'combat-create' game.id %}>
+                                        <button class="rpgui-button"><p>Initiate combat</p></button>
+                                    </a>
+                                </p>
                             {% endif %}
                         </div>
                     </div>
