--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -152,7 +152,6 @@
 
         eventsSocket.onmessage = function(event) {
             message = JSON.parse(event.data)
-            eventList.innerHTML += '<p>' + moment(message["date"]).fromNow() + ', ' + message["message"] + '</p>'
             lines = eventList.innerHTML.split('</p>');
             if (lines.length > 10) {
                 lines.splice(0, 1);
@@ -176,10 +175,8 @@
         const PLAYER = "player";
         if ("{{ game.master.user }}" == "{{ user }}") {
             player_type = MASTER;
-            senderStr = "the Master";
         } else {
             player_type = PLAYER;
-            senderStr = "[{{ user }}]";
         }
 
         if (sendButton !== null) {
@@ -190,7 +187,7 @@
                         'type': MESSAGE,
                         'date': Date.now(),
                         'player_type': player_type,
-                        'message': senderStr + ' said: ' + userInput,
+                        'message': userInput,
                     }));
                     input.value = '';
                     input.focus();
