--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -145,6 +145,7 @@
 
         eventsSocket.onmessage = function(event) {
             message = JSON.parse(event.data)
+            eventList.innerHTML += '<p>[' + moment(message["date"]).format("hh:mm") + '], ' + message["message"] + '</p>'
             lines = eventList.innerHTML.split('</p>');
             if (lines.length > 10) {
                 lines.splice(0, 1);
@@ -152,10 +153,6 @@
             }
             if (message["type"] === QUEST_UPDATE) {
                 $("#quest").load(" #quest > *");
-            } else {
-                // The full page has to be reloaded, otherwise clicking on the button
-                // triggers no action.
-                location.reload();
             }
         };
 
