enrich messages for both players and masters

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -177,6 +177,7 @@
                         'type': MESSAGE,
                         'date': Date.now(),
                         'player_type': player_type,
+                        'username': '{{ user }}',
                         'message': userInput,
                     }));
                     input.value = '';
