--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -139,7 +139,7 @@
 
         const MESSAGE = "message";
         const QUEST_UPDATE = "quest.update";
-        const ABILITY_CHECK = "ability.check";
+        const ABILITY_CHECK_RESPONSE = "ability.check.response";
         const SAVING_THROW = "saving.throw";
 
         eventsSocket.onmessage = function(event) {
@@ -196,10 +196,10 @@
         if (abilityCheckButton !== null) {
             abilityCheckButton.addEventListener('click', function(event) {
                 eventsSocket.send(JSON.stringify({
-                    'type': ABILITY_CHECK,
+                    'type': ABILITY_CHECK_RESPONSE,
                     'date': Date.now(),
                     'player_type': PLAYER,
-                    'message': senderStr + ' performed an ability check!',
+                    'username': '{{ user }}',
                 }));
             });
         }
