--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -139,7 +139,9 @@
 
         const MESSAGE = "message";
         const QUEST_UPDATE = "quest.update";
+        const ABILITY_CHECK_REQUEST = "ability.check.request";
         const ABILITY_CHECK_RESPONSE = "ability.check.response";
+        const ABILITY_CHECK_RESULT = "ability.check.result";
         const SAVING_THROW = "saving.throw";
 
         eventsSocket.onmessage = function(event) {
@@ -153,7 +155,13 @@
             }
             if (message["type"] === QUEST_UPDATE) {
                 $("#quest").load(" #quest > *");
-            }
+            } else if (message["type"] === ABILITY_CHECK_REQUEST
+                || message["type"] === ABILITY_CHECK_RESPONSE
+                || message["type"] === ABILITY_CHECK_RESULT) {
+                // The full page has to be reloaded, otherwise clicking on the button
+                // triggers no action.
+                    location.reload();
+                }
         };
 
         eventsSocket.onclose = function(event) {
