--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -150,6 +150,7 @@
         const ABILITY_CHECK_RESULT = "ability.check.result";
         const SAVING_THROW = "saving.throw";
         const COMBAT_INITIATIVE_REQUEST = "combat.initiative.request";
+        const COMBAT_INITIATIVE_RESPONSE = "combat.initiative.response";
 
         eventsSocket.onmessage = function(event) {
             message = JSON.parse(event.data)
@@ -234,10 +235,10 @@
         if (dexterityCheckButton !== null) {
             dexterityCheckButton.addEventListener('click', function(event) {
                 eventsSocket.send(JSON.stringify({
-                    'type': COMBAT_ROLL_INITIATIVE,
+                    'type': COMBAT_INITIATIVE_RESPONSE,
                     'date': Date.now(),
                     'player_type': PLAYER,
-                    'message': senderStr + ' performed a dexterity check!',
+                    'username': '{{ user }}',
                 }));
             });
         }
