--- a/character/templates/character/character_create.html
+++ b/character/templates/character/character_create.html
@@ -21,11 +21,10 @@
           {{ wizard.form }}
         {% endif %}
       </table>
-      {% if wizard.steps.prev %}
-        <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">first step</button>
-        <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">prev step</button>
-      {% endif %}
       <div class="rpgui-center">
+        {% if wizard.steps.prev %}
+          <button name="wizard_goto_step" class="rpgui-button" type="submit" value="{{ wizard.steps.prev }}"><p>Previous step</p></button>
+        {% endif %}
         <button class="rpgui-button" type="submit"><p>Submit</p></button>
       </div>
     </form>
