--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -80,7 +80,7 @@
                     {% endfor %}
                     {% if game.master.user == user %}
                         <div class="rpgui-center">
-                            <a href={% url 'game-invite-character' game.id %}>
+                            <a href={% url 'game-invite-user' game.id %}>
                                 <button class="rpgui-button"><p>Invite a character</p></button>
                             </a>
                         </div>
