--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -81,7 +81,7 @@
                     {% if game.master.user == user %}
                         <div class="rpgui-center">
                             <a href={% url 'game-invite-user' game.id %}>
-                                <button class="rpgui-button"><p>Invite a character</p></button>
+                                <button class="rpgui-button"><p>Invite a user</p></button>
                             </a>
                         </div>
                     {% endif %}
