--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -7,7 +7,7 @@
         <link href={% static 'rpgui/rpgui.min.css' %} rel="stylesheet" type="text/css" >
         <script src={% static "rpgui/rpgui.min.js" %}></script>
         <script src={% static "js/jquery-3.7.0.min.js" %}></script>
-        <link href={% static 'roleplay.css' %} rel="stylesheet" type="text/css" >
+        <link rel="stylesheet" href="{% static 'css/rpg-styles.css' %}">
     </head>
 
     <body class="rpgui-content">
