Remove static/images folder and replace with emoji icons

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -122,9 +122,9 @@
         </div>
 
         <div class="rpgui-center inline">
-            <img class="rpgui-icon" style="transform: scaleX(-1)" src={% static 'images/mini-skull.png' %}>
+            <span style="transform: scaleX(-1); display: inline-block;">💀</span>
             <a href="#title">- Back to top -</a>
-            <img class="rpgui-icon" src={% static 'images/mini-skull.png' %}>
+            <span>💀</span>
         </div>
     </div>
 
