--- a/game/templates/registration/password_reset_complete.html
+++ b/game/templates/registration/password_reset_complete.html
@@ -1,10 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="form rpgui-container framed-golden">
-        <h1>The password has been changed!</h1>
-        <div class="rpgui-center">
-            <a href="{% url 'login' %}"><button class="rpgui-button"><p>Log in</p></button></a>
+    <div class="rpg-container">
+        <div class="rpg-panel" style="max-width: 500px; margin: 50px auto;">
+            <h1 class="panel-title">✅ Password Changed!</h1>
+            <div class="game-message success">
+                <p>Your password has been successfully changed.</p>
+            </div>
+            <div class="action-buttons mt-2">
+                <a href="{% url 'login' %}" class="rpg-btn btn-primary">Log in</a>
+            </div>
         </div>
     </div>
 {% endblock %}
