--- a/game/templates/registration/password_reset_done.html
+++ b/game/templates/registration/password_reset_done.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="form rpgui-container framed-golden">
-        <h1>Password reset sent</h1>
-        <p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
-        <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+    <div class="rpg-container">
+        <div class="rpg-panel" style="max-width: 600px; margin: 50px auto;">
+            <h1 class="panel-title">✉️ Password Reset Sent</h1>
+            <div class="game-message success">
+                <p class="mb-1">We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
+                <p>If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.</p>
+            </div>
+        </div>
     </div>
 {% endblock %}
